2301
Lovely! In my test with r18652 it takes a rather long time, and eventually spits out the error message below. Something is amiss, in any case.
```scala
scala> List(null: Range, null: List[Int])
<console>:5: error: type mismatch;
 found   : Range
 required: Sequence[Int]{def companion: scala.collection.generic.Companion[Sequence[Any]{def companion: scala.collection.generic.Companion[Sequence[Any]]; def reverse: Sequence[Any]{def sameElements[B >: Any](that: Iterable[B]): Boolean}; def sameElements[B >: Any](that: Iterable[B]): Boolean; def dropRight(n: Int): Sequence[Any]{def...
       List(null: Range, null: List[Int])
                ^
<console>:5: error: type mismatch;
 found   : List[Int]
 required: Sequence[Int]{def companion: scala.collection.generic.Companion[Sequence[Any]{def companion: scala.collection.generic.Companion[Sequence[Any]]; def reverse: Sequence[Any]{def sameElements[B >: Any](that: Iterable[B]): Boolean}; def sameElements[B >: Any](that: Iterable[B]): Boolean; def dropRight(n: Int): Sequence[Any]...
       List(null: Range, null: List[Int])
                             ^
```
